# ipdesignagentEDA

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD_DEPLOYMENT.md  Dockerfile  Dockerfile.openroad  OPENROAD_SETUP.md  README.md  app.py  demo_multi_agent.py  demo_real_flow.py  demo_timing_dashboard.py  deploy.sh  docker-compose.yml  generate_report_viewer.py  job_server.sh  pyproject.toml  run_flow.sh  start.sh  start_gui_stack.sh  test_dashboard_standalone.py
.streamlit/: config.toml
content/lessons/: lesson_01_slack_wns_tns.md  lesson_02_reading_rpt_files.md  lesson_03_synthesis_on_gcd.md  lesson_04_floorplan_and_place.md  lesson_05_cts_and_route.md  lesson_06_reading_sta_reports.md  lesson_07_fixing_a_setup_violation.md  lesson_08_multi_corner_intro.md
data/sample_reports/: cell_usage.rpt  drc_report.rpt  setup_report.rpt
docs/: PDK_COMPARISON.md
reports/: sample_timing_dashboard.html
src/ip_agent/: __init__.py  _db.py  a2a_card.py  agent.py  api.py  config.py  cost_router.py  eda_bridge.py  etl.py  flow_manager.py  guardrails.py  ingest.py  mcp_server.py  models.py  openroad_tools.py  orchestrator.py  queue_manager.py  report_visualizer.py  retriever.py  router.py  run_tracker.py  specialists.py  tools.py
src/ip_agent/ui/: __init__.py  components.py  (+2 more)
terraform/: .gitignore  alb_gui.tf  cloudfront_dashboards.tf  cloudwatch.tf  deploy.sh  dns.tf  ecr.tf  ecs.tf  ecs_openroad.tf  efs.tf  main.tf  outputs.tf  rds.tf  s3_dashboards.tf  secrets.tf  terraform.tfvars.example  tfplan  variables.tf
tests/: eval_ragas.py  test_agent.py  test_retriever.py
